--- a/force-app/main/default/lwc/assignResourcesByRole/assignResourcesByRole.css
+++ b/force-app/main/default/lwc/assignResourcesByRole/assignResourcesByRole.css
@@ -2,3 +2,15 @@ h1 {
     padding: 5px;
     font-weight: bolder;
 }
+.margin-not-null {
+    margin: 0px 1%; /*var(--lwc-spacingNone, 0)*/ 
+}
+.role-assign {
+    margin-top: 15px;
+}
+.hours-input {
+    width: 50px;
+}
+.div-nowrap {
+    white-space: nowrap;
+}
